Cleaned up the files/folder structure of the repository.  Fixed some missing issues both in the documentation and EFSM design spreadsheet.  Added a new test to catch one of these misses and updated code.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+.DS_Store
+*/.DS_Store
+docs/OrchestrationRuntime.log
+docs/OrchestrationRuntime.aux
+docs/OrchestrationRuntime.pdf
 test_runtime.x
 *.log
 src/*.o
