--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ docs/OrchestrationRuntime.log
 docs/OrchestrationRuntime.aux
 docs/OrchestrationRuntime.pdf
 test_runtime.x
+test_runtime_f90.x
 *.log
+*.mod
 src/*.o
+src/*.mod
 test/*.o
+test/*.mod
