While advancing the runtime capabilities in the Fortran interface and building up the full Fortran test, I knowingly broke the code in such a way that the C++ tests would no longer compile.  With this commit, I fixed the code and C++ tests so that these now build and are passing again.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .DS_Store
 */.DS_Store
+.ipynb_checkpoints
+RuntimeF90Test_*_*.dat
 docs/OrchestrationRuntime.log
 docs/OrchestrationRuntime.aux
 docs/OrchestrationRuntime.pdf
