The threadteam tests were lost some time ago when AMReX was introduced.  For some reason the ASSERT_/EXPECT_THROW routines appear to be incompatible with building the test using MPICH/mpicxx with AMReX.
Rather than try to figure out why, I have separated out the ThreadTeam tests as
as their own standalone test.  Updated the code so that this could run and it is
now passing again.

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ RuntimeF90Test_*_*.dat
 docs/OrchestrationRuntime.log
 docs/OrchestrationRuntime.aux
 docs/OrchestrationRuntime.pdf
-test_runtime.x
+test_threadteam_cpp.x
+test_runtime_cpp.x
 test_runtime_f90.x
 *.log
 *.mod
