No need for OrchestrationRuntime to be templatized.  The routines are clearly linked to one iterator interface, which means Tile_iterator_t for us.

--- a/Makefile_runtime_F90
+++ b/Makefile_runtime_F90
@@ -25,6 +25,7 @@ CXX_HDRS   = \
     $(TESTDIR)/constants.h
 CXX_SRCS       = \
     $(SRCDIR)/Tile.cpp \
+    $(SRCDIR)/OrchestrationRuntime.cpp \
     $(SRCDIR)/tile_fi.cpp \
     $(SRCDIR)/grid_fi.cpp \
     $(SRCDIR)/orchestration_runtime_fi.cpp
