--- a/Makefile_runtime_cpp
+++ b/Makefile_runtime_cpp
@@ -65,10 +65,11 @@ $(COMMAND): $(OBJS) $(MAKEFILE)
 	$(CXX) -c $(CXXFLAGS) $(CXXWARNS) -o $@ $<
 
 clean:
-	/bin/rm -f $(COMMAND) $(BASEDIR)/Test*.log
-	/bin/rm -f $(COMMAND) $(SRCDIR)/*.o
-	/bin/rm -f $(COMMAND) $(TESTDIR)/*.o
-	/bin/rm -f $(COMMAND) $(SRCDIR)/*.mod
-	/bin/rm -f $(COMMAND) $(BASEDIR)/*.mod
-	/bin/rm -f $(COMMAND) $(TESTDIR)/*.mod
+	/bin/rm -f $(BASEDIR)/Test*.log
+	/bin/rm -f $(SRCDIR)/*.o
+	/bin/rm -f $(TESTDIR)/*.o
+	/bin/rm -f $(SRCDIR)/*.mod
+	/bin/rm -f $(BASEDIR)/*.mod
+	/bin/rm -f $(TESTDIR)/*.mod
+	/bin/rm -f $(BASEDIR)/test_*.x 
 
