WIP: Added new binary that gathers data for scaling and timing studies.  This has broken the other tests.

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,21 @@
 .DS_Store
 */.DS_Store
 .ipynb_checkpoints
-RuntimeF90Test_*_*.dat
-RuntimeCppTest_*_*.dat
+gatherData_*_*_*_*_*_*_cpp.dat
 docs/OrchestrationRuntime.log
 docs/OrchestrationRuntime.aux
 docs/OrchestrationRuntime.pdf
 test_threadteam_cpp.x
 test_runtime_cpp.x
 test_runtime_f2003.x
+gather_data_cpp.x
 *.log
 *.mod
+*.dSYM
 src/*.o
 src/*.mod
+test/buildInfo.h
+test/Flash.h
+test/constants.h
 test/*.o
 test/*.mod
