Wrote a test script for all tests and data gathering binaries.  Homogenized names.

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,22 @@
 .DS_Store
 */.DS_Store
 .ipynb_checkpoints
-gatherData_*_*_*_*_*_*_cpp.dat
+gatherDataCpp_*_*_*_*_*_*.dat
+gatherDataF2003_*_*_*_*_*_*.dat
 docs/OrchestrationRuntime.log
 docs/OrchestrationRuntime.aux
 docs/OrchestrationRuntime.pdf
 test_threadteam_cpp.x
 test_runtime_cpp.x
-test_runtime_f2003.x
 gather_data_cpp.x
+gather_data_F2003.x
 *.log
 *.mod
 *.dSYM
 src/*.o
 src/*.mod
 test/buildInfo.h
+test/buildInfo.inc
 test/Flash.h
 test/constants.h
 test/*.o
