--- a/Makefile_gatherData_cpp
+++ b/Makefile_gatherData_cpp
@@ -26,6 +26,7 @@ CXX_HDRS   = \
     $(TESTDIR)/Flash.h \
     $(TESTDIR)/constants.h \
     $(TESTDIR)/estimateTimerResolution.h \
+    $(TESTDIR)/initTile_cpu.h \
     $(TESTDIR)/Analysis.h \
     $(TESTDIR)/computeLaplacianDensity_cpu.h \
     $(TESTDIR)/computeLaplacianEnergy_cpu.h \
@@ -34,6 +35,7 @@ SRCS       = \
     $(SRCDIR)/Tile.cpp \
     $(SRCDIR)/OrchestrationRuntime.cpp \
     $(TESTDIR)/estimateTimerResolution.cpp \
+    $(TESTDIR)/initTile_cpu.cpp \
     $(TESTDIR)/Analysis.cpp \
     $(TESTDIR)/computeLaplacianDensity_cpu.cpp \
     $(TESTDIR)/computeLaplacianEnergy_cpu.cpp \
