WIP: Updating contents of repository to include build and test information for running in CPU-only mode on Summit.  Code was cleaned so that builds finished without unnecessary warnings and tests ran through.
I wasn't able to finish cleaning/testing all tests.  Therefore, it should be
assumed that none of this is valid.

Some tests needed to be made more flexible to account for the different HW.
Therefore tests associated with the hello site are likely broken as well.

--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,12 @@ gatherDataF2003_*_*_*_*_*_*.dat
 docs/OrchestrationSystem.log
 docs/OrchestrationSystem.aux
 docs/OrchestrationSystem.pdf
-test_threadteam_cpp.x
-test_runtime_cpp.x
-gather_data_cpp.x
-gather_data_F2003.x
+sites/*/test_threadteam_cpp.x
+sites/*/test_runtime_cpp.x
+sites/*/gather_data_cpp.x
+sites/*/gather_data_*_*.x
+sites/*/gather_data_F2003.x
+sites/summit/gatherDataCpp.*
 *.log
 *.mod
 *.dSYM
