--- a/sites/hello/Makefile_gatherData_cpp
+++ b/sites/hello/Makefile_gatherData_cpp
@@ -4,7 +4,7 @@ SHELL=/bin/sh
 
 BASE     = gather_data_cpp
 MAKEFILE = Makefile_gatherData_cpp
-BASEDIR  = .
+BASEDIR  = ../..
 INCDIR   = $(BASEDIR)/includes
 SRCDIR   = $(BASEDIR)/src
 TESTDIR  = $(BASEDIR)/test
@@ -25,7 +25,6 @@ CXX_HDRS   = \
     $(INCDIR)/OrchestrationRuntime.h \
     $(TESTDIR)/Flash.h \
     $(TESTDIR)/constants.h \
-    $(TESTDIR)/estimateTimerResolution.h \
     $(TESTDIR)/initTile_cpu.h \
     $(TESTDIR)/Analysis.h \
     $(TESTDIR)/computeLaplacianDensity_cpu.h \
@@ -34,7 +33,6 @@ CXX_HDRS   = \
 SRCS       = \
     $(SRCDIR)/Tile.cpp \
     $(SRCDIR)/OrchestrationRuntime.cpp \
-    $(TESTDIR)/estimateTimerResolution.cpp \
     $(TESTDIR)/initTile_cpu.cpp \
     $(TESTDIR)/Analysis.cpp \
     $(TESTDIR)/computeLaplacianDensity_cpu.cpp \
@@ -92,6 +90,7 @@ clean:
 	/bin/rm -f $(BASEDIR)/Test*.log
 	/bin/rm -f $(SRCDIR)/*.o
 	/bin/rm -f $(TESTDIR)/*.o
+	/bin/rm -f *.mod
 	/bin/rm -f $(SRCDIR)/*.mod
 	/bin/rm -f $(BASEDIR)/*.mod
 	/bin/rm -f $(TESTDIR)/*.mod
