--- a/sites/summit/Makefile_threadteam_cpp
+++ b/sites/summit/Makefile_threadteam_cpp
@@ -20,10 +20,12 @@ CXX_HDRS   = \
     $(INCDIR)/ThreadTeamTerminating.h \
     $(INCDIR)/ThreadTeamRunningOpen.h \
     $(INCDIR)/ThreadTeamRunningClosed.h \
-    $(INCDIR)/ThreadTeamRunningNoMoreWork.h
+    $(INCDIR)/ThreadTeamRunningNoMoreWork.h \
+    $(TESTDIR)/threadTeamTest.h 
 SRCS       = \
     $(TESTDIR)/testThreadRoutines.cpp \
-    $(TESTDIR)/testThreadTeam.cpp
+    $(TESTDIR)/testThreadTeam.cpp \
+    $(TESTDIR)/runThreadTeamTest.cpp
 
 OBJS      = $(addsuffix .o, $(basename $(SRCS)))
 COMMAND   =  $(BASE).x
@@ -32,7 +34,7 @@ CXX       = g++
 CXXFLAGS  = -g -O0 -std=c++11 -I$(INCDIR) -I$(TESTDIR) -I$(GTESTDIR)/include
 CXXWARNS  =
 
-LIBS      = -lstdc++ -lgtest -lgtest_main
+LIBS      = -lstdc++ -lgtest
 LDFLAGS   = -L$(GTESTDIR)/lib64 -pthread
 
 ifdef DEBUG
