See if Jenkins can access my installation of googletest

--- a/sites/lcrc_jenkins/Makefile_threadteam_cpp
+++ b/sites/lcrc_jenkins/Makefile_threadteam_cpp
@@ -9,7 +9,7 @@ INCDIR   = $(BASEDIR)/includes
 SRCDIR   = $(BASEDIR)/src
 TESTDIR  = $(BASEDIR)/test
 CCDIR    = /blues/gpfs/home/software/spack-0.10.1/opt/spack/linux-centos7-x86_64/gcc-4.8.5/gcc-7.1.0-4bgguypumyezlt6vfhha3ukntrlrx7fq
-GTESTDIR = $(HOME)/local/googletest/gcc_7.1.0
+GTESTDIR = /home/oneal/local/googletest/gcc_7.1.0
 
 # Common files
 CXX_HDRS   = \
