--- a/sites/hello/Makefile_runtime_cpp
+++ b/sites/hello/Makefile_runtime_cpp
@@ -39,7 +39,7 @@ SRCS       = \
     $(TESTDIR)/computeLaplacianEnergy_cpu.cpp \
     $(TESTDIR)/scaleEnergy_cpu.cpp \
     $(TESTDIR)/Analysis.cpp \
-    $(TESTDIR)/runAllCppTests.cpp
+    $(TESTDIR)/runRuntimeCppTest.cpp
 
 OBJS      = $(addsuffix .o, $(basename $(SRCS)))
 COMMAND   =  $(BASE).x
@@ -48,7 +48,7 @@ CXX       = mpicxx
 CXXFLAGS  = -g -O0 -I$(INCDIR) -I$(TESTDIR) -I$(AMREXDIR)/include -I$(GTESTDIR)/include -std=c++11
 CXXWARNS  =
 
-LIBS      = -lstdc++ -lamrex -lgtest -lgtest_main
+LIBS      = -lstdc++ -lamrex -lgtest
 LDFLAGS   = -L$(AMREXDIR)/lib -L$(GTESTDIR)/lib
 
 ifdef DEBUG
