--- a/sites/bebop/Makefile_runtime_cpp
+++ b/sites/bebop/Makefile_runtime_cpp
@@ -2,14 +2,15 @@ SHELL=/bin/sh
 
 # TODO: Redo this with more care.  Make certain that template .h/.cpp dependencies are correct
 
-BASE     = test_runtime_cpp
-MAKEFILE = Makefile_runtime_cpp
-BASEDIR  = ../..
-INCDIR   = $(BASEDIR)/includes
-SRCDIR   = $(BASEDIR)/src
-TESTDIR  = $(BASEDIR)/test
-AMREXDIR = $(HOME)/local/gcc_7.1.0/amrex_2d
-GTESTDIR = $(HOME)/local/gcc_7.1.0/googletest
+BASE         = test_runtime_cpp
+MAKEFILE     = Makefile_runtime_cpp
+BASEDIR      = ../..
+INCDIR       = $(BASEDIR)/includes
+SRCDIR       = $(BASEDIR)/src
+TESTBASEDIR  = $(BASEDIR)/test/Base
+TESTDIR      = $(BASEDIR)/test/Runtime
+AMREXDIR     = $(HOME)/local/gcc_7.1.0/amrex_2d
+GTESTDIR     = $(HOME)/local/gcc_7.1.0/googletest
 
 # Common files
 CXX_HDRS   = \
@@ -24,33 +25,33 @@ CXX_HDRS   = \
     $(INCDIR)/ThreadTeamRunningClosed.h \
     $(INCDIR)/ThreadTeamRunningNoMoreWork.h \
     $(INCDIR)/OrchestrationRuntime.h \
+    $(TESTBASEDIR)/initTile_cpu.h \
+    $(TESTBASEDIR)/computeLaplacianDensity_cpu.h \
+    $(TESTBASEDIR)/computeLaplacianEnergy_cpu.h \
+    $(TESTBASEDIR)/scaleEnergy_cpu.h \
+    $(TESTBASEDIR)/Analysis.h \
     $(TESTDIR)/Flash.h \
-    $(TESTDIR)/constants.h \
-    $(TESTDIR)/initTile_cpu.h \
-    $(TESTDIR)/computeLaplacianDensity_cpu.h \
-    $(TESTDIR)/computeLaplacianEnergy_cpu.h \
-    $(TESTDIR)/scaleEnergy_cpu.h \
-    $(TESTDIR)/Analysis.h
+    $(TESTDIR)/constants.h
 SRCS       = \
     $(SRCDIR)/Tile.cpp \
     $(SRCDIR)/OrchestrationRuntime.cpp \
-    $(TESTDIR)/initTile_cpu.cpp \
+    $(TESTBASEDIR)/initTile_cpu.cpp \
+    $(TESTBASEDIR)/computeLaplacianDensity_cpu.cpp \
+    $(TESTBASEDIR)/computeLaplacianEnergy_cpu.cpp \
+    $(TESTBASEDIR)/scaleEnergy_cpu.cpp \
+    $(TESTBASEDIR)/Analysis.cpp \
     $(TESTDIR)/testRuntimeInt.cpp \
     $(TESTDIR)/testRuntimeTile.cpp \
-    $(TESTDIR)/computeLaplacianDensity_cpu.cpp \
-    $(TESTDIR)/computeLaplacianEnergy_cpu.cpp \
-    $(TESTDIR)/scaleEnergy_cpu.cpp \
-    $(TESTDIR)/Analysis.cpp \
     $(TESTDIR)/runRuntimeCppTest.cpp
 
 OBJS      = $(addsuffix .o, $(basename $(SRCS)))
 COMMAND   =  $(BASE).x
 
 CXX       = mpic++
-CXXFLAGS  = -g -O0 -std=c++11 -I$(INCDIR) -I$(TESTDIR) -I$(AMREXDIR)/include -I$(GTESTDIR)/include
+CXXFLAGS  = -g -O0 -std=c++11 -I$(INCDIR) -I$(TESTBASEDIR) -I$(TESTDIR) -I$(AMREXDIR)/include -I$(GTESTDIR)/include
 CXXWARNS  =
 
-LIBS      = -lpthread -lstdc++ -lamrex -lgtest
+LIBS      = -lpthread -lstdc++ -lgfortran -lamrex -lgtest
 LDFLAGS   = -L$(AMREXDIR)/lib -L$(GTESTDIR)/lib64
 
 ifdef DEBUG
@@ -69,13 +70,9 @@ $(COMMAND): $(OBJS) $(MAKEFILE)
 	$(CXX) -c $(CXXFLAGS) $(CXXWARNS) -o $@ $<
 
 clean:
-	/bin/rm -f $(BASEDIR)/Test*.log
+	/bin/rm -f $(COMMAND)
+	/bin/rm -f Test*.log
 	/bin/rm -f $(SRCDIR)/*.o
+	/bin/rm -f $(TESTBASEDIR)/*.o
 	/bin/rm -f $(TESTDIR)/*.o
-	/bin/rm -f *.mod
-	/bin/rm -f $(SRCDIR)/*.mod
-	/bin/rm -f $(BASEDIR)/*.mod
-	/bin/rm -f $(TESTDIR)/*.mod
-	/bin/rm -f $(BASEDIR)/test_*.x 
-	/bin/rm -f $(BASEDIR)/gather_data_*.x 
 
